--- a/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
@@ -119,7 +119,7 @@
                                                                     <td th:text="${contacto.telefonofijocontacto}">telefonofijocontacto</td>
                                                                     <td th:text="${contacto.telefonomovilcontacto}">telefonomovilcontacto</td>
                                                                     <td th:text="${contacto.emailcontacto}">emailcontacto</td>
-                                                                    <td><a th:href="${'../../contactos/show/' + contacto.codigocontacto}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../contactos/show/' + contacto.codigocontacto}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
@@ -160,7 +160,7 @@
                                                                     <td th:text="${dependiente.codigodependiente}">codigodependiente</td>
                                                                     <td th:text="${dependiente.nombredependiente}">nombredependiente</td>
                                                                     <td th:text="${dependiente.parentesco}">parentesco</td>   
-                                                                    <td><a th:href="${'../../dependientes/show/'+ dependiente.codigodependiente}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../dependientes/show/'+ dependiente.codigodependiente}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
@@ -207,7 +207,7 @@
                                                                     <td th:text="${formacionacademica.tituloobtenido}">tituloobtenido</td>   
                                                                     <td th:text="${formacionacademica.fechadesdeformacionacademica}">fechadesdeformacionacademica</td> 
                                                                     <td><a  class="btn btn-danger" th:onclick="'../../descargapdf(\'' + ${formacionacademica.codigoformacionacademica} + '\');'" >Descargar acuerdo</a></td>
-                                                                    <td><a th:href="${'../../formacionacademicas/show/' + formacionacademica.codigoformacionacademica}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../formacionacademicas/show/' + formacionacademica.codigoformacionacademica}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
@@ -252,7 +252,7 @@
                                                                     <td th:text="${caparecibida.especialidad}">especialidad</td>   
                                                                     <td th:text="${caparecibida.organismo}">organismo</td>   
                                                                     <td th:text="${caparecibida.fechaevento}">fechaevento</td>   
-                                                                    <td><a th:href="${'../../caparecibidas/show/' + caparecibida.codigocaparecibidas}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../caparecibidas/show/' + caparecibida.codigocaparecibidas}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
@@ -299,7 +299,7 @@
                                                                     <td th:text="${experiencialaboral.fechahastaexperiencialaboral}">fechahastaexperiencialaboral</td>   
                                                                     <td th:text="${experiencialaboral.salarioinicial}">salarioinicial</td> 
                                                                     <td th:text="${experiencialaboral.sectorexperiencialaboral}">sectorexperiencialaboral</td> 															
-                                                                    <td><a th:href="${'../../experiencialaborales/show/' + experiencialaboral.codigoexperiencialaboral}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../experiencialaborales/show/' + experiencialaboral.codigoexperiencialaboral}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
@@ -342,7 +342,7 @@
                                                                     <td th:text="${ubicacionfisica.cargofuncional}">cargofuncional</td>
                                                                     <td th:text="${ubicacionfisica.jefeinmediato}">jefeinmediato</td>   
                                                                     <td th:text="${ubicacionfisica.nombreubicacion}">nombreubicacion</td>    
-                                                                    <td><a th:href="${'../../ubicacionfisicas/show/' + ubicacionfisica.codigoubicacion}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../ubicacionfisicas/show/' + ubicacionfisica.codigoubicacion}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
@@ -385,7 +385,7 @@
                                                                     <td th:text="${contrato.fechainiciocontrato}">fechainiciocontrato</td>
                                                                     <td th:text="${contrato.fechafincontrato}">fechafincontrato</td>   
                                                                     <td th:text="${contrato.salarioactual}">salarioactual</td>    
-                                                                    <td><a th:href="${'../../contratos/show/' + contrato.codigocontrato}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../contratos/show/' + contrato.codigocontrato}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
@@ -428,7 +428,7 @@
                                                                     <td th:text="${hijodiscapacidad.nombrehijodiscapacidad}">nombrehijodiscapacidad</td>
                                                                     <td th:text="${hijodiscapacidad.nombrediscapacidad}">nombrediscapacidad</td>   
                                                                     <td th:text="${hijodiscapacidad.tipodiscapacidad}">tipodiscapacidad</td>    
-                                                                    <td><a th:href="${'../../hijodiscapacidades/show/' + hijodiscapacidad.codigohijodiscapacidad}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../hijodiscapacidades/show/' + hijodiscapacidad.codigohijodiscapacidad}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
@@ -475,7 +475,7 @@
                                                                     <td th:text="${idioma.habla}">habla</td>   
                                                                     <td th:text="${idioma.traduce}">traduce</td> 
                                                                     <td th:text="${idioma.nivel}">nivel</td> 															
-                                                                    <td><a th:href="${'../../idiomas/show/' + idioma.codigoidioma}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../idiomas/show/' + idioma.codigoidioma}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
@@ -526,7 +526,7 @@
                                                                     <td th:text="${beneficio.descripcionbeneficio}">descripcionbeneficio</td>  
                                                                     <td th:text="${beneficio.fechainiciobeneficio}">fechainiciobeneficio</td>   
                                                                     <td th:text="${beneficio.fechafinalizarbeneficio}">fechafinalizarbeneficio</td> 															
-                                                                    <td><a th:href="${'../../beneficio/show/' + beneficio.codigobeneficio}" class="btn btn-info">Mostrar</a></td>
+                                                                    <td><a th:href="${'../../beneficio/show/' + beneficio.codigobeneficio}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
                                                                 </tr>
                                                             </table>
                                                         </div>
