--- a/src/main/resources/templates/fragments/contacto/contactoform.html
+++ b/src/main/resources/templates/fragments/contacto/contactoform.html
@@ -67,16 +67,28 @@
             </div>
             <h3 align="center"></h3>
             <br>
+            <form class="form-horizontal" id="formempleado" th:object="${empleado}" >
+            
+            <div class="col-md-12" style="background-color:#d9edf7;">
+                <div class="panel-info">
+                    <div class="panel-heading row text-center">
+                        <h3>Gestionando Informacion del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
+                    </div>
+                </div>
+                 <input type="hidden" id="codem"  th:value="${empleado.codigoempleado}"/>
+            </div>
+            </form>
             <form class="form-horizontal" id="formcontacto" th:object="${contacto}" th:action="@{../contacto}" method="post">
                 <!--          <span th:object="${empleadoContacto}"> 
                              <input type="text" th:field="*{codigoempleado}"/>
-                          </span>-->
+                          </span>
                 <input type="hidden" th:field="*{codigocontacto}"/>
                 <!--<input type="hidden" th:field="*{nombrecontacto}"/>-->
-                <input type="hidden" id="codem"  />
+               <input  type="hidden" th:field="*{codigocontacto}"/>
                 <div class="col-md-12"  >
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Nombre(*):</label>
+                        <br>
+                        <label class="col-sm-3 control-label">Nombre del Contacto(*):</label>
                         <div class="col-sm-5">
                             <input type="text" class="form-control"   required="true" size="50" maxlength="50" th:field="*{nombrecontacto}"  />
                         </div>
@@ -87,7 +99,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Apellido(*):</label>
+                        <label class="col-sm-3 control-label">Apellido del Contacto(*):</label>
                         <div class="col-sm-5">
                             <input type="text" class="form-control"  required="true" size="50" maxlength="50" th:field="*{apellidocontacto}"   />
                         </div>
@@ -98,7 +110,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Direccion(*):</label>
+                        <label class="col-sm-3 control-label">Direccion del Contacto(*):</label>
                         <div class="col-sm-8">
                             <!--<input type="text" class="form-control"  required="true" size="100" maxlength="100" th:field="*{direccion}"  />-->
                             <textarea rows="4" cols="50" class="form-control" size="100" maxlength="100"  required="true" th:field="*{direccion}">
@@ -113,9 +125,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Sexo(*):</label>
+                        <label class="col-sm-3 control-label">Sexo del Contacto(*):</label>
                         <div class="col-sm-2">
-                            <select class="form-control" name="sexocontanto"  >
+                            <select class="form-control" name="sexocontanto" >
                                 <!--th:field="*{sexocontacto}" >-->
                                 <option>Femenino</option>
                                 <option>Masculino</option>
@@ -128,7 +140,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Telefono Fijo(*):</label>
+                        <label class="col-sm-3 control-label">Telefono Fijo del Contacto(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control num_telefono" required="true"    th:field="*{telefonofijocontacto}" />
                         </div>
@@ -139,7 +151,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Telefono Movil(*):</label>
+                        <label class="col-sm-3 control-label">Telefono Movil del Contacto(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control num_telefono" required="true"    th:field="*{telefonomovilcontacto}"  />
                         </div>
@@ -150,7 +162,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Correo Electronico(*):</label>
+                        <label class="col-sm-3 control-label">Correo Electronico del Contacto(*):</label>
                         <div class="col-sm-5">
                             <input type="email" class="form-control" required="true"   th:field="*{emailcontacto}"    />
                         </div>
@@ -167,7 +179,7 @@
                                         <button type="submit" class="btn btn-default" id="btnGuardar">Guardar</button>
                                         <button type="reset" class="btn btn-default">Limpiar</button>-->
 
-                          <a href="#" th:href="@{/empleados/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
+                          <a href="#" th:href="@{/empleados/show/}+${empleado.codigoempleado}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
 
                         <button type="submit" class="btn btn-success" id="btnGuardar"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                         <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
@@ -269,11 +281,11 @@
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
                                     dateFormat: 'dd/mm/yy'
                                     });
-                                    });
-                                    $('#btnGuardar').click(function(){
+                                    });$('#btnGuardar').click(function(){
                                     $("#formcontacto").attr('action', '../contacto/' + $("#codem").val().toString());
                                     $("form#formcontacto").submit();
-                                    });</script>
+                                    }
+                                    );</script>
 <script th:inline="javascript">
 
     $(document).ready(function () {
@@ -285,7 +297,7 @@
             type: "success",
             icon: "success"
             }).then(function() {
-    location.href = '../empleados/';
+    location.href = '../empleados/show/'+ document.getElementById("codem").value;
     });
     }
 
@@ -302,6 +314,7 @@
     var URLactual = window.location.href;
     if (URLactual.includes("edit")){
 //                    alert("str");
+
     }
     else{
 //                    alert("str1");
