--- a/src/main/resources/templates/fragments/dependiente/dependienteshow.html
+++ b/src/main/resources/templates/fragments/dependiente/dependienteshow.html
@@ -66,7 +66,18 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
     
         <br>
+         <form class="form-horizontal" id="formempleado" th:object="${empleado}" >
+            
+            <div class="col-md-12" style="background-color:#d9edf7;">
+                <div class="panel-info">
+                    <div class="panel-heading row text-center">
+                        <h3>Informacion de Dependiente del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
+                    </div>
+                </div>
+            </div>
+</form>
        <form class="form-horizontal">
+           <br>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label class="col-sm-5 control-label">codigo:</label>
@@ -118,7 +129,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <div class="col-md-12">
                     <div class="row" align="center">
                         <!--<button type="submit" class="btn btn-default"><a href="#" th:href="@{/empleados/}">Regresar</a></button>-->
- <a href="#" th:href="@{/empleados/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>                  
+ <a href="#" th:href="@{/empleados/show/}+${empleado.codigoempleado}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>                                   
                     </div>
                 </div>
   
