--- a/src/main/resources/templates/fragments/empleado/empleados.html
+++ b/src/main/resources/templates/fragments/empleado/empleados.html
@@ -26,7 +26,7 @@
                 <th>DUI</th>
                 <th>NIT</th>
                 <th>Email</th>
-                <th>Gestion</th>
+                <th></th>
                 <th></th>
                 <th></th>
             </tr>
@@ -38,7 +38,8 @@
                 <td th:text="${empleado.duiempleado}">duiempleado</td>
                 <td th:text="${empleado.nitempleador}">nitempleador</td>
                 <td th:text="${empleado.emailempleado}">emailempleado</td>
-                <td><a th:href="${'./show/' + empleado.codigoempleado}" class="btn btn-info">Gestion <br> complementaria</a></td>
+                <td><a th:href="${'./showcons/' + empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
+                <!--<td><a th:href="${'./show/' + empleado.codigoempleado}" class="btn btn-info">Gestion <br> complementaria</a></td>-->
                 <td><a th:href="${'./edit/' + empleado.codigoempleado}" class="btn btn-success">Editar</a></td>
                 <!--<td><a th:href="${'./delete/' + empleado.codigoempleado}" class="btn btn-danger">Eliminar</a></td>-->
                 <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${empleado.codigoempleado} + '\');'" >Eliminar</a></td>
