--- a/src/main/resources/templates/fragments/idioma/idiomaform.html
+++ b/src/main/resources/templates/fragments/idioma/idiomaform.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+
       <link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" media="screen"/>
      <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
      <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -66,14 +66,26 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
     
         <br>
+          <form class="form-horizontal" id="formempleado" th:object="${empleado}" >
+            
+            <div class="col-md-12" style="background-color:#d9edf7;">
+                <div class="panel-info">
+                    <div class="panel-heading row text-center">
+                        <h3>Gestionando Informacion del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
+                    </div>
+                </div>
+                 <input type="hidden" id="codem"  th:value="${empleado.codigoempleado}"/>
+            </div>
+            </form>
       <form class="form-horizontal" id="formidioma" th:object="${idioma}" th:action="@{../idioma}" method="post">
 <!--          <span th:object="${empleadoContacto}"> 
              <input type="text" th:field="*{codigoempleado}"/>
           </span>-->
             <input type="hidden" th:field="*{codigoidioma}"/>
-            <input type="hidden" id="codem"  />
+            <!--<input type="hidden" id="codem"  />-->
             <div class="col-md-12"  >
                  <div class="form-group">
+                     <br>
                     <label class="col-sm-3 control-label">Nombre de Idioma(*):</label>
                     <div class="col-sm-5">
                         <input type="text" class="form-control"    required="true" size="50" maxlength="50" th:field="*{nombreidioma}"  />
@@ -154,11 +166,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
           <div class="col-md-12">
             <div class="row" align="center">
 
- <a href="#" th:href="@{/empleados/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-
-               
-
-
+ <a href="#" th:href="@{/empleados/show/}+${empleado.codigoempleado}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>                  
+                              
 <button type="submit" class="btn btn-success" id="btnGuardar"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
 <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
 
