--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -209,7 +209,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Empleados <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                       <li><a href="#" th:href="@{/empleados/new/empleado}">Crear Empleados</a></li>
-                                    <li><a href="#" th:href="@{/empleados/consulta}">Consultar Empleados</a></li>
+                                    <!--<li><a href="#" th:href="@{/empleados/consulta}">Consultar Empleados</a></li>-->
                                     <li><a href="#" th:href="@{/empleados/}">Gestionar Empleados</a></li>
                                   
 
