--- a/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
@@ -29,11 +29,22 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
   
   
     <div>
+         <form class="form-horizontal" id="formempleado" th:object="${empleado}" >
+            
+            <div class="col-md-12" style="background-color:#d9edf7;">
+                <div class="panel-info">
+                    <div class="panel-heading row text-center">
+                        <h3>Gestionando Informacion del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
+                    </div>
+                </div>
+                 <input type="hidden" id="codem"  th:value="${empleado.codigoempleado}"/>
+            </div>
+            </form>
         <!--th:action="@{../beneficio}"-->
         <form class="form-horizontal" id="asignar" th:object="${beneficio}"   method="post">
             <!--<input type="hidden" th:field="*{codigobeneficio}" id="codben"/>-->
            <!--<span th:object="${empleado}">--> 
-             <input type="hidden" id="codem"  />
+             <!--<input type="hidden" id="codem"  />-->
           <!--</span>-->
             
 <!--            <div class="form-group">
@@ -45,6 +56,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
               <div class="form-group">
                         <label class="col-sm-3 control-label">Beneficios:</label>
                         <div class="col-sm-7" >
+                            <br>
                             <select class="form-control"  th:field="*{codigobeneficio}" >
                                 <option th:each="c:${beneficios}" th:value="${c.codigobeneficio}" th:text="${c.nombrebeneficio}"></option>
                             </select>
@@ -64,8 +76,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="row" align="center">
                           
                             <!--<button type="button" class="btn btn-info"><a href="#" th:href="@{/empleados/}">Regresar</a></button>-->
-                            <button type="button" class="btn btn-primary"> <span class="glyphicon glyphicon-arrow-left"></span>Regresar <a href="#" th:href="@{/empleados/}">.</a></button>
-                            <button type="submit" class="btn btn-success" id="Asignarbtn"><span class="glyphicon glyphicon-floppy-disk"></span>Asignar</button>
+                            <a href="#" th:href="@{/empleados/show/}+${empleado.codigoempleado}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>                  
+                    <button type="submit" class="btn btn-success" id="Asignarbtn"><span class="glyphicon glyphicon-floppy-disk"></span>Asignar</button>
 
                             <!--<button type="submit" class="btn btn-primary" id="Asignarbtn"  >Asignar</button>-->
                             <!--<button type="reset" class="btn btn-default">Limpiar</button>-->
