--- a/src/main/resources/templates/fragments/contrato/contratoform.html
+++ b/src/main/resources/templates/fragments/contrato/contratoform.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+
       <!--<link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" media="screen"/>-->
      <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
      <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -66,11 +66,23 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
     
         <br>
+        <form class="form-horizontal" id="formempleado" th:object="${empleado}" >
+            
+            <div class="col-md-12" style="background-color:#d9edf7;">
+                <div class="panel-info">
+                    <div class="panel-heading row text-center">
+                        <h3>Gestionando Informacion del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
+                    </div>
+                </div>
+                 <input type="hidden" id="codem"  th:value="${empleado.codigoempleado}"/>
+            </div>
+            </form>
   <form class="form-horizontal"  th:object="${contrato}" th:action="@{../contrato}" method="post">
                 <input type="hidden" th:field="*{codigocontrato}"/>
-                <input type="hidden" id="codem" th:field="*{codigoempleado}"/>
+                <!--<input type="hidden" id="codem" th:field="*{codigoempleado}"/>-->
             <div class="col-md-12"  >
                  <div class="form-group">
+                     <br>
                     <label class="col-sm-3 control-label">Salario Actual(*):</label>
                     <div class="col-sm-2">
                         <input type="text"  class="form-control num_decimal"  required="true" maxlength="9"  th:field="*{salarioactual}"  />
@@ -104,7 +116,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                 </div>
                  <div class="form-group">
-                    <label class="col-sm-3 control-label">Partida(*):</label>
+                    <label class="col-sm-3 control-label">Numero de Partida(*):</label>
                     <div class="col-sm-2">
                         <input type="text" class="form-control"  required="true" size="9" maxlength="9"  th:field="*{partidacontrato}"   />
                     </div>
@@ -115,7 +127,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                 </div>
                  <div class="form-group">
-                    <label class="col-sm-3 control-label">Subpartida(*):</label>
+                    <label class="col-sm-3 control-label">Numero de Subpartida(*):</label>
                     <div class="col-sm-2">
                         <input type="text" class="form-control"    required="true" size="100" maxlength="100" th:field="*{subpartidacontrato}"  />
                     </div>
@@ -170,7 +182,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <!--                <button type="button" class="btn btn-default"><a href="#" th:href="@{/empleados/}">Regresar</a></button>
                 <button type="submit" class="btn btn-default" >Guardar</button>
                 <button type="reset" class="btn btn-default">Limpiar</button>-->
- <a href="#" th:href="@{/empleados/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
+  <a href="#" th:href="@{/empleados/show/}+${empleado.codigoempleado}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
+ 
 <button type="submit" class="btn btn-success" id="btnGuardar"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
 <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
 
