--- a/src/main/resources/templates/fragments/mision/misiones.html
+++ b/src/main/resources/templates/fragments/mision/misiones.html
@@ -25,7 +25,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/mision.png}"/>
             </div> 
         <!--</div>-->
-        <div th:if="${not #lists.isEmpty(misiones)}" >
+        <!--<div th:if="${not #lists.isEmpty(misiones)}" >-->
         <h3 align="center"></h3>
         <table id="tablita" class="table table-striped table-bordered" >
             <thead>
@@ -54,7 +54,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td><a th:onclick="'eliminar(\'' + ${ mision.codigomision} +'\');'" class="btn btn-danger">Eliminar</a></td>
             </tr>
         </table>
-        </div>
+        <!--</div>-->
    
 </div>
 <div class="col-md-12">
